# news_summariser

./: .coverage  .env  .gitignore  Makefile  README.md  pyproject.toml
app/: fetch_news.py  summarise_story.py
data/: fetch_news.py  news_stories.db  store_news_to_db.py
models/: __init__.py  summarisation_model.py
src/: .news_stories.db
src/news_summariser/: config.py  main.py
src/news_summariser/client/: news_api_client.py
src/news_summariser/db/: engine.py  init.py  repository.py  schema.py
src/news_summariser/models/: sentiment_model.py  summarisation_model.py
src/news_summariser/parsing/: bbc_article_parser.py
src/news_summariser/services/: news_summary_sentiment_pipeline.py
tests/: test_fetch_news.py
tests/integration/: conftest.py  test_pipeline_store.py
tests/live/: test_live_api.py
tests/unit/: test_bbc_article_parser.py  test_fetch_news.py  test_news_api_client.py  test_repository_sqlite.py  test_summarisation_model.py
tests/unit_tests/: test_fetch_news.py  test_summarisation_model.py
