[project]
name = "news-summariser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.120.1",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --cov=tests --verbose"
pythonpath = "."
testpaths = "tests"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90"]
ignore = ["E501"]
exclude = ["venv/", ".venv/", "__pypackages__/"]

